MOSC-2703 / Incluir na rota de detalhamento da OSC o campo "cd_situacao_cadastral" (Já criada a coluna no BD)
